--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.6
-  crypto: ^3.0.2
   flutter_secure_storage: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  bcrypt: ^1.1.3
   
 
 dev_dependencies:
