--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   bcrypt: ^1.1.3
+  intl: ^0.18.1
   
 
 dev_dependencies:
