--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0 
   http: ^0.13.6
   flutter_secure_storage: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
